# txm-s3-log-shipper-lambda

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.jenkins  Jenkinsfile  Jenkinsfile_pullrequest  Makefile  README.md  handler.py  input_files.json  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
.github/: pull_request_template.md
s3_log_shipper/: input_files.json  parsers.py  s3_event_models.py  shipper.py
s3_log_shipper/groks/: emr
test/: fixtures.py  sample_logs.csv  test_config.json  test_handler.py  test_parser.py  test_s3_events.py  test_shipper.py
