[tool.poetry]
name = "txm-s3-log-shipper-lambda"
version = "v1.0.0"
description = "TxM S3 log shipper lambda"
authors = ["HMRC Digital"]

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "3.7.7"
boto3 = "^1.12.13"
aws-lambda-logging = "^0.1.1"
pygrok = "^1.0.0"

[tool.poetry.dev-dependencies]
python = "3.7.7"
boto3 = "^1.12.13"
aws-lambda-logging = "^0.1.1"
pygrok = "^1.0.0"
moto = "1.3.14"
pytest = "^5.3.5"