[tool.poetry]
name = "txm-s3-log-shipper-lambda"
version = "v1.0.0"
description = "TxM S3 log shipper lambda"
authors = ["HMRC Digital"]

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.12.13"
aws-lambda-logging = "^0.1.1"
pygrok = "^1.0.0"
redis = "3.5.0"

[tool.poetry.dev-dependencies]
boto3 = "^1.12.13"
aws-lambda-logging = "^0.1.1"
pygrok = "^1.0.0"
redis = "3.5.0"
moto = "1.3.14"
pytest = "^5.3.5"
mypy = "^0.770"
bandit = "^1.6.2"
black = "^19.10b0"
pycodestyle = "^2.5.0"
pytest-cov = "^2.8.1"
pytest-black = "^0.3.8"
pytest-pycodestyle = "^2.1.3"
safety = "^1.9.0"
